<resources>
    <string name="app_name">Marketim</string>
    <string name="loginTitle">MARKETİM</string>
    <string name="userName">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="rememberMe">Beni Hatırla</string>
    <string name="loginBtn">Giriş</string>
    <string name="loading">Yükleniyor..</string>
    <string name="required">Boş bırakmayınız</string>
    <string name="ordersBtn">Siparişlerim</string>
    <string name="quitBtn">Çıkış Yap</string>
    <string name="quitMessage">Uygulamadan çıkış yapmak istiyor musunuz?</string>
    <string name="connectionErrorMessage">Lütfen cihazınızın internet bağlantısı olduğundan emin olunuz</string>
    <string name="generalErrorMessage">İşlem sırasında bir hata oluştu!</string>
    <string name="tryAgain">Tekrar Dene</string>
    <string name="wrongUserOrPass">Kullanıcı adı ve şifre hatalı</string>
</resources>
